# test-codescan

./: CMakeLists.txt
adas/: CMakeLists.txt
adas/include/: adas_define_common.h  adas_service.h  adas_so_base.h  adas_so_l2.h  adas_so_pcc.h  custom_util.hpp  event_msg_head.hpp
adas/l2plus/: CMakeLists.txt
adas/l2plus/demo/: adas.ini  demo.cpp  一汽release note.xlsx
adas/l2plus/inc/: adas.ini  adas.license  l2_service.h
adas/l2plus/src/: l2_service.cpp  main.cpp
adas/pcc/: CMakeLists.txt
adas/pcc/demo/: AV2HP.conf  Av2HpDemo.cpp
adas/pcc/inc/: adas.license  custom_util.hpp  event_variable.hpp  pcc_service.h  qingdao.adas.license
adas/pcc/src/: main.cpp  pcc_service.cpp
adas/src/: adas_service.cpp  adas_so_l2.cpp  adas_so_pcc.cpp  main.cpp
avm-manager/: CMakeLists.txt
avm-manager/include/: avm_custom_logic.h  avm_manager.h  avm_msg_builder.h  avm_service.h  avm_service_inf.h  avm_sync_service.h  avm_vehicle_data_collect.h  jit808_avm_def.h
avm-manager/src/: avm_custom_logic.cpp  avm_manager.cpp  avm_msg_builder.cpp  avm_service.cpp  avm_sync_service.cpp  avm_vehicle_data_collect.cpp  main.cpp
bt/: CMakeLists.txt
bt/include/: bluetooth_service.h  callable_event.h  errors_def.h  event.h  msg_def.h
bt/src/: bluetooth_service.cpp  callback_event.cpp  main.cpp
close-ctrl/: CMakeLists.txt
close-ctrl/include/: cctrl_common.h  cctrl_service.h  cctrl_service_inf.h
close-ctrl/src/: cctrl_service.cpp  main.cpp
curl_test/: CMakeLists.txt  curl_tls_1.c
daq/: CMakeLists.txt
daq/doc/: daq.uxf
daq/include/: callable_event.h  collection_service.h  daq_sqldb.h  errors_def.h  event.h  ipc_head.h  message.h  message_808.h  sl_signals.h
daq/sim/: CMakeLists.txt
daq/sim/src/: main.cpp
daq/src/: collection_service.cpp  daq_sqldb.cpp  main.cpp  message.cpp  message_808.cpp
debug/: CMakeLists.txt  debug-cmd-color.hpp  debug-cmd.cpp  debug-cmd.hpp  debug-location.cpp  debug-location.hpp  debug-power.cpp  debug-power.hpp  debug-property.cpp  debug-property.hpp  debug-session.cpp  debug-tel.cpp  debug-tel.hpp  debug-test.cpp  debug-test.hpp
diag/: CMakeLists.txt
diag/include/: smlk_common.h  smlk_diag.h  smlk_tsp_jtt808.h
diag/src/: main.cpp  smlk_common.cpp  smlk_diag.cpp
dyc/: CMakeLists.txt
dyc/doc/: dyc.uxf
dyc/inc/: ConfigLoader.h  DbcConfigFormat.h  DynamicCollection.h  SignalFormat.h  dyc_config.h  dyc_event.h  dyc_util.h  filetool.h  ipc_head.h  message_inf.h  vec_signals.h
dyc/src/: ConfigLoader.cpp  DbcConfigFormat.cpp  DynamicCollection.cpp  SignalFormat.cpp  callable_event.cpp  filetool.cpp  main.cpp
ev/: CMakeLists.txt
ev/config/: ev_config.ini
ev/include/: callable_event.h  common_32960.h  ev_signals.h  message_def_32960.h  message_inf.h  message_observer_32960.h  protocol_reporter.h  report_service.h
ev/include/ThreadPoll/: ThreadPool.h  ThreadSafeDeque.h  ThreadSafeQueue.h
ev/include/message_32960/: message_blindinfo_32960.h  message_heartbeat_32960.h  message_realtimeinfo_32960.h  message_vehiclelogin_32960.h  message_vehiclelogout_32960.h
ev/include/utility_32960/: sqllite_32960.h
ev/include/utility_32960/socket/: ISocket.h  TCPClient.h  UDPClient.h
ev/include/utility_32960/timer/: EV_Timer.h  TimerClient.h  TimersPoll.h
ev/src/: common_32960.cpp  main.cpp  message_observer_32960.cpp  protocol_reporter.cpp  report_service.cpp
ev/src/message_32960/: message_blindinfo_32960.cpp  message_heartbeat_32960.cpp  message_realtimeinfo_32960.cpp  message_vehiclelogin_32960.cpp  message_vehiclelogout_32960.cpp
ev/src/utility_32960/: sqllite_32960.cpp
ev/src/utility_32960/ini/: INI.c  INIReader.cpp
ev/src/utility_32960/socket/: TCPClient.cpp  UDPClient.cpp
ev/src/utility_32960/timer/: EV_Timer.cpp  TimerClient.cpp  TimersPoll.cpp
ev/uml/: database.uxf  login_out.uxf  message.uxf  reportservice.uxf  socket.uxf  数据上报.vsdx  数据库管理 .vsdx  状态管理.vsdx  登入登出.vsdx  链路管理.vsdx
gb6/: CMakeLists.txt
gb6/config/: gb6_config.ini
gb6/include/: common_17691.h  ipc_head.h  message_body.h  message_body_1239.h  message_body_17691.h  message_def_17691.h  message_inf.h  obd.h  protocol_reporter.h  protocol_reporter_1239_07.h  recorder.h  report_service.h  report_signals.h  result_handler.h  sl_errors.h
gb6/include/utility_17691/socket/: ISocket.h  TCPClient.h  UDPClient.h
gb6/simulator/: CMakeLists.txt
gb6/simulator/GB17691_Platform/: CMakeLists.txt
gb6/simulator/GB17691_Platform/include/: protocol_def.h  server.h  session.h  smlk_errors.h  smlk_typedefs.h
gb6/simulator/GB17691_Platform/src/: main.cpp  server.cpp  session.cpp
gb6/src/: common_17691.cpp  main.cpp  message_body.cpp  message_body_1239.cpp  message_body_17691.cpp  protocol_reporter.cpp  protocol_reporter_1239_07.cpp  recorder.cpp  report_service.cpp  result_handler.cpp
gb6/src/utility_17691/socket/: TCPClient.cpp  UDPClient.cpp
gb6/uml/: 1.drawio  2.drawio  3.drawio  Socket.uxf  VehicleInfo.uxf  loginout.uxf  message_body.uxf  recorder.uxf  reportservice.uxf
ipc_call_test/: CMakeLists.txt  main.cpp
loan_ctrl/: CMakeLists.txt  LoanEcuConf.xml
logging/: CMakeLists.txt  logging.uxf
logging/include/: decoder_8f53_2.h  ftp_pusher.h  logger_client.h  logger_event_collect.h  logger_jt808_def.h  logger_monitor.h  smlk_zip.h
logging/src/: logger.cpp  logger_client.cpp
logging/utils/: decoder_8f53_2.cpp  ftp_pusher.cpp  logger_event_collect.cpp  logger_monitor.cpp  smlk_zip.cpp
vehicle-ctrl/: CMakeLists.txt  config_file.json  config_file_ok.json
vehicle-ctrl/include/: vehctrl_configfile.h  vehctrl_general_definition.h  vehctrl_inf.h  vehctrl_jtt808.h  vehctrl_jtt808_getset_param.h  vehctrl_jtt808_msg8f41.h  vehctrl_jtt808_msg8f42.h  vehctrl_jtt808_msg8f51.h  vehctrl_queue.h  vehctrl_service.h  vehctrl_service_inf.h  vehctrl_status_file.h
vehicle-ctrl/src/: main.cpp  vehctrl_configfile.cpp  vehctrl_jtt808.cpp  vehctrl_jtt808_getset_param.cpp  vehctrl_jtt808_msg8f41.cpp  vehctrl_jtt808_msg8f42.cpp  vehctrl_jtt808_msg8f51.cpp  vehctrl_queue.cpp  vehctrl_service.cpp  vehctrl_status_file.cpp
vehicle-ctrl/uml/: MessageHandler.uxf  RctrlService.uxf
(+33 files in other folders)
